added tests and some JPA